terraform_code/V3-EC2-VPC.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "demo-server" {
  ami                    = "ami-08a52ddb321b32a8c"
  instance_type          = "t2.micro"
  key_name               = "demo"
  vpc_security_group_ids = [aws_security_group.ssh-access.id]
  subnet_id              = aws_subnet.demo-pub-subnet-01.id
}

resource "aws_security_group" "ssh-access" {
  name        = "ssh-access"
  description = "ssh access"
  vpc_id      = aws_vpc.demo-vpc.id


  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-access"
  }
}

resource "aws_vpc" "demo-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "demo-vpc"
  }

}

resource "aws_subnet" "demo-pub-subnet-01" {
  vpc_id                  = aws_vpc.demo-vpc.id
  cidr_block              = "10.1.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1a"
  tags = {
    Name = "demo-pub-subnet-01"
  }
}

resource "aws_subnet" "demo-pub-subnet-02" {
  vpc_id                  = aws_vpc.demo-vpc.id
  cidr_block              = "10.1.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1b"
  tags = {
    Name = "demo-pub-subnet-02"
  }

}

resource "aws_internet_gateway" "demo-igw" {
  vpc_id = aws_vpc.demo-vpc.id
  tags = {
    Name = "demo-igw"
  }

}

resource "aws_route_table" "demo-public-rt" {
  vpc_id = aws_vpc.demo-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.demo-igw.id
  }
}

resource "aws_route_table_association" "demo-rta-public-subnet-01" {
  subnet_id      = aws_subnet.demo-pub-subnet-01.id
  route_table_id = aws_route_table.demo-public-rt.id

}

resource "aws_route_table_association" "demo-rta-public-subnet-02" {
  subnet_id      = aws_subnet.demo-pub-subnet-02.id
  route_table_id = aws_route_table.demo-public-rt.id

}
